--- a/bibliography.bib
+++ b/bibliography.bib
@@ -48,7 +48,7 @@
   author = {Connectivity Standards Alliance},
   year = {2024},
   note = {Accessed: 2025-08-05},
-  url = {https://csa-iot.org/developer-resources/zigbee/}
+  url = {https://csa-iot.org/all-solutions/zigbee/zigbee-direct/}
 }
 
 @misc{zwave-spec,
@@ -72,7 +72,7 @@
   author = {Wi-Fi Alliance},
   year = {2022},
   note = {Accessed: 2025-08-05},
-  url = {https://www.wi-fi.org/discover-wi-fi/wi-fi-certified-6}
+  url = {https://www.Wi-Fi.org/discover-Wi-Fi/Wi-Fi-certified-6}
 }
 
 @misc{WiFiVsIoT,
@@ -80,7 +80,7 @@
   title     = {Wi-Fi and the Internet of Things},
   year      = {2021},
   note      = {Accessed: 2025-08-05},
-  url       = {https://www.wi-fi.org/internet-things-iot}
+  url       = {https://www.Wi-Fi.org/internet-things-iot}
 }
 
 @misc{MatterWhitePaper,
