--- a/capitoli/cap1.tex
+++ b/capitoli/cap1.tex
@@ -5,7 +5,7 @@ Negli ultimi anni, le tecnologie legate all'Internet of Things (IoT) hanno trasf
 Le radici della domotica affondano negli anni '80, quando i primi sistemi cablati, seppur rudimentali come il protocollo X10, permettevano già il controllo remoto di luci ed elettrodomestici. Il decennio successivo ha segnato un'accelerazione significativa: l'introduzione di sistemi più sofisticati come KNX e l'avvento delle reti wireless (Zigbee, Z-Wave) hanno reso la casa intelligente accessibile a tutti. Molti di noi ricordano l'impatto dei primi termostati Nest o delle lampadine Philips Hue, prodotti che hanno fatto capire alle persone comuni quanto può essere utile la domotica in casa.
 
 \vspace{0.5cm}
-L'arrivo dell'intelligenza artificiale ha ulteriormente ampliato le possibilità ed accellerato il cambiamento in atto. Oggi le nostre case non si limitano a rispondere ai nostri comandi: è come se ci conoscessero e si adattassero a noi. Per esempio, dopo qualche settimana il sistema capisce che di solito accendiamo le luci del salotto verso le 19:00 e inizia a farlo automaticamente. Gli assistenti vocali come Alexa, Google o Siri non sono più semplici esecutori di ordini: a volte ci sorprendono suggerendo cose utili tipo "Hey, sta per piovere, vuoi che chiuda le finestre?" oppure "È ora di andare a dormire, spengo le luci?". È un po' come avere un maggiordomo digitale che impara a conoscerti giorno dopo giorno.
+L'arrivo dell'intelligenza artificiale ha ulteriormente ampliato le possibilità ed accelerato il cambiamento in atto. Oggi le nostre case non si limitano a rispondere ai nostri comandi: è come se ci conoscessero e si adattassero a noi. Per esempio, dopo qualche settimana il sistema capisce che di solito accendiamo le luci del salotto verso le 19:00 e inizia a farlo automaticamente. Gli assistenti vocali come Alexa, Google o Siri non sono più semplici esecutori di ordini: a volte ci sorprendono suggerendo cose utili tipo "Hey, sta per piovere, vuoi che chiuda le finestre?" oppure "È ora di andare a dormire, spengo le luci?". È un po' come avere un maggiordomo digitale che impara a conoscerti giorno dopo giorno.
 
 \vspace{0.5cm}
 L'edge computing costituisce un'innovazione particolarmente rilevante, consentendo l'elaborazione dei dati direttamente a livello locale, eliminando la dipendenza dal cloud. Questo approccio migliora sensibilmente i tempi di risposta: una telecamera di sicurezza con capacità di edge computing può identificare immediatamente un intruso e inviare alert in tempo reale, senza dover attendere l'elaborazione su server remoti.
