--- a/capitoli/cap3.tex
+++ b/capitoli/cap3.tex
@@ -25,7 +25,7 @@ Lo svantaggio è la necessità di un hub centrale per ogni marca di dispositivi 
 Un'ulteriore caratteristica è la sicurezza integrata, così come la compatibilità tra marche diverse, tuttavia, la velocità di trasmissione è limitata rispetto al Wi-Fi, il che lo rende meno adatto a trasmettere grandi quantità di dati.\\
 
 \textbf{Wi-Fi} è probabilmente il protocollo più familiare, essendo quello usato per connettere smartphone, computer e smart TV a internet, molti dispositivi IoT, come videocamere di sicurezza o assistenti vocali, usano il Wi-Fi perché garantisce alta velocità e non richiede hub aggiuntivi. 
-Lo svantaggio principale sta nell’alto consumo energetico, che limita l’uso di Wi-Fi in dispositivi alimentati a batteria, altre problematiche riguradano la sicurezza di questi dispositivi e la congestione della rete wi-fi domestica.\\
+Lo svantaggio principale sta nell’alto consumo energetico, che limita l’uso di Wi-Fi in dispositivi alimentati a batteria, altre problematiche riguradano la sicurezza di questi dispositivi e la congestione della rete Wi-Fi domestica.\\
 
 \textbf{Bluetooth Low Energy (BLE)} è ideale per dispositivi a corto raggio e a bassissimo consumo, come smartwatch, fitness tracker o sensori di prossimità. Un utilizzo molto comune di questo protocolo è per sbloccare la porta  o accessi quando si avvicina uno smartphone od un Tag BLE. Il vantaggio è il risparmio energetico e la semplicità, ma la portata limitata lo rende inadatto per coprire tutta la casa senza dispositivi aggiuntivi.
 \section{Thread e Matter: verso l'interoperabilità e l'unificazione}
