--- a/capitoli/cap4.tex
+++ b/capitoli/cap4.tex
@@ -79,7 +79,7 @@ L'implementazione di politiche di accesso robuste richiede un bilanciamento tra 
 
 \subsection{Educazione e consapevolezza degli utenti}
 
-La componente umana rimane fondamentale in qualsiasi strategia di sicurezza. La formazione degli abitanti della casa, soprattutto per gli utenti con ruoli di gestione amministartiva dei dispositivi,  dovrebbe coprire:
+La componente umana rimane fondamentale in qualsiasi strategia di sicurezza. La formazione degli abitanti della casa, soprattutto per gli utenti con ruoli di gestione amministrativa dei dispositivi,  dovrebbe coprire:
 
 \begin{itemize}
     \item Riconoscimento di tentativi di phishing specifici per dispositivi IoT
