--- a/capitoli/cap5.tex
+++ b/capitoli/cap5.tex
@@ -8,7 +8,7 @@ L’evoluzione tecnologica degli ultimi anni ha favorito la diffusione di una mo
 
 \section{Indicatori chiave di performance}
 
-Per capire davvero quanto un protocollo di comunicazione IoT sia efficace all’interno di un’abitazione intelligente, non basta leggerne le specifiche tecniche ma è fondamentale considerare alcuni indicatori chiave di performance, definiti con il nome Key Performance Indicators abbrteviato in  (KPI), questi indicatori oggettivi ci  aiutano a valutare in modo concreto e comparabile il comportamento di ciascuna tecnologia nelle situazioni reali di abitazioni comuni.
+Per capire davvero quanto un protocollo di comunicazione IoT sia efficace all’interno di un’abitazione intelligente, non basta leggerne le specifiche tecniche ma è fondamentale considerare alcuni indicatori chiave di performance, definiti con il nome Key Performance Indicators abbreviato in  (KPI), questi indicatori oggettivi ci  aiutano a valutare in modo concreto e comparabile il comportamento di ciascuna tecnologia nelle situazioni reali di abitazioni comuni.
 
 \subsection{Latenza: il tempo di risposta del sistema}
 
