--- a/glossario.tex
+++ b/glossario.tex
@@ -1,5 +1,6 @@
 \chapter{Glossario dei termini e degli acronimi}
 \begin{description}
+    \item[Frammentazione] Situazione in cui dispositivi, piattaforme e protocolli di comunicazione non sono pienamente interoperabili a causa dell’adozione di standard, profili o implementazioni proprietarie differenti.
     \item[IoT] Insieme di dispositivi e sensori collegati a Internet, capaci di comunicare autonomamente e rendere intelligenti ambienti e oggetti quotidiani.
     \item[BLE] Bluetooth Low Energy --- Standard wireless a basso consumo energetico.
     \item[Zigbee] Protocollo wireless basato su IEEE 802.15.4, ottimizzato per reti mesh a corto raggio.
