--- a/main.tex
+++ b/main.tex
@@ -78,9 +78,9 @@
 \include{capitoli/cap5}
 \include{capitoli/cap6}
 \include{capitoli/cap7}
-%\include{capitoli/cap8}
+\include{capitoli/cap8}
 \appendix
 \include{glossario}
-\include{appendice}
+
 \printbibliography
 \end{document}
